src/objects/RecallInformations__x.object
<CustomObject>
    <description>RecallInformations</description>
    <externalDataSource>ODS_Data</externalDataSource>
    <externalName>RecallInformations</externalName>
    <fields>
        <fullName>CmpgnCd__c</fullName>
        <description>CmpgnCd</description>
        <externalDeveloperName>CmpgnCd</externalDeveloperName>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CmpgnCrtDt__c</fullName>
        <description>CmpgnCrtDt</description>
        <externalDeveloperName>CmpgnCrtDt</externalDeveloperName>
        <label>Campaign Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CmpgnEnglshDesc__c</fullName>
        <description>CmpgnEnglshDesc</description>
        <externalDeveloperName>CmpgnEnglshDesc</externalDeveloperName>
        <label>Campaign English Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CmpgnFrnchDesc__c</fullName>
        <description>CmpgnFrnchDesc</description>
        <externalDeveloperName>CmpgnFrnchDesc</externalDeveloperName>
        <label>Campaign French Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CmpgnTypCd__c</fullName>
        <description>CmpgnTypCd</description>
        <externalDeveloperName>CmpgnTypCd</externalDeveloperName>
        <label>Campaign Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MdmUcid__c</fullName>
        <description>MdmUcid</description>
        <externalDeveloperName>MdmUcid</externalDeveloperName>
        <label>Link to Customer</label>
        <length>255</length>
        <referenceTargetField>Contact.UCID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recall &amp; Product Update Information</relationshipLabel>
        <relationshipName>RecallInformations</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>RecallCmpgnDtlId__c</fullName>
        <description>RecallCmpgnDtlId</description>
        <externalDeveloperName>RecallCmpgnDtlId</externalDeveloperName>
        <label>RecallCmpgnDtlId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vin__c</fullName>
        <description>Vin</description>
        <externalDeveloperName>Vin</externalDeveloperName>
        <label>VIN / Serial #</label>
        <length>128</length>
        <referenceTargetField>VIN__c.ProductSerialNumber__c</referenceTargetField>
        <referenceTo>VIN__c</referenceTo>
        <relationshipLabel>Recall &amp; Product Update Information</relationshipLabel>
        <relationshipName>RecallInformations</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <label>Recall &amp; Product Update Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MdmUcid__c</columns>
        <columns>ExternalId</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Recall &amp; Product Update Information</pluralLabel>
</CustomObject>